8231436: Fix the applicability of a no-@Target annotation type